fix scrollbar issue
scrollbar was appearing for no reason. Removed it.

--- a/style.css
+++ b/style.css
@@ -5,14 +5,17 @@
 
 html,body {
     /*     border: 2px solid red;  */
+    margin: 0;
+    padding: 0;
     width: 100%;
     height: 100%;
-    box-sizing: border-box; 
+    box-sizing: border-box;
+    overflow: auto;
 }
 
-body {
-    position: relative; 
-}
+/* body {
+   position: relative; 
+   } */
 
 /* body {
    border: 2px solid blue; 
